# dlt-ops

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERSIONING.md  context7.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  semantic-release.yml
ci/: dlt-versions.txt  dump_state_schema.py  sql-boundary-allow.txt  sql_boundary_guard.sh
ci/state-schema-dumps/: bigquery_127.json  bigquery_129.json  duckdb_127.json  duckdb_129.json  postgres_127.json  postgres_129.json
dlt_ops/: __init__.py  _compat.py  config.py  orchestration.py  preflight.py  pydantic_fields.py  schema_contracts.py
dlt_ops/airflow/: __init__.py  factory.py  secrets.py  tasks.py  validators.py
dlt_ops/assertions/: __init__.py  builtin.py  config.py  engine.py  models.py  quarantine.py
dlt_ops/bigquery/: __init__.py  adapter.py  validators.py
dlt_ops/checkpoints/: __init__.py  decorator.py  manager.py  utils.py
dlt_ops/cli/: _common.py  _init_templates.py  backfill.py  cli.py  init.py  pipeline.py  plugins.py  status.py
dlt_ops/destinations/: __init__.py  _base.py  _capabilities.py  bigquery.py  derived.py  duckdb.py  postgres.py  protocol.py
dlt_ops/discovery/: __init__.py  _sandbox_child.py  api.py  cleanup.py  models.py  phase1.py  phase2.py  runner.py  scanner.py  validator.py
dlt_ops/discovery/validators/: __init__.py  _common.py  assertions.py  config.py  import_safety.py  platform_rules.py  resources.py  schema.py  staleness.py
dlt_ops/plugins/: __init__.py  registry.py
dlt_ops/reconciler/: __init__.py  _adapters.py  _emission.py  additive.py  common.py  models.py  protocols.py  removal.py
dlt_ops/runs/: __init__.py  backfill_state.py  reader.py  writer.py
dlt_ops/secrets/: __init__.py  default.py  protocol.py  setup.py
dlt_ops/sentry/: __init__.py
docs/: index.md
docs/concepts/: assertions.md  backfill.md  checkpoints.md  destinations-and-tiers.md  discovery.md  failure-semantics.md  plugins.md  reconciler.md  runs-ledger.md  scheduling-and-orchestration.md  validation.md
docs/configuration/: index.md  reference.md  rules.md
docs/development/: contributing.md  releases.md  testing.md
docs/getting-started/: ingest-your-data.md  installation.md  project-layout.md  quickstart.md
docs/guides/: add-a-source.md  adopt-existing-project.md  airflow.md  assertions.md  backfill.md  build-sources-with-ai.md  checkpoint-resume.md  cleanup.md  dagster.md  deployment.md  drift-detection.md  prefect.md  production-readiness.md  write-a-destination-adapter.md  write-plugins.md
docs/reference/: api.md  cli.md  compatibility.md  destinations.md  versioning.md
docs/stylesheets/: extra.css
examples/basic_project/.dlt/: config.toml  secrets.toml
examples/basic_project/github_events/data/: actors.jsonl  event_types.jsonl  events.jsonl
examples/basic_project/github_events/resource/: events.py
examples/basic_project/github_events/source/: github_events_api.py  github_events_full.py
tapes/: Dockerfile  Dockerfile.dockerignore  README.md  backfill.tape  backfill_setup.sh  backfill_web_events.py  checkpoint-resume.tape  entrypoint.sh  quickstart.tape  render.sh
tests/: __init__.py  conftest.py  test_airflow_runtime.py  test_alert_sinks.py  test_api.py  test_assertions.py  test_backfill.py  test_bigquery_helper.py  test_checkpoints.py  test_cleanup.py  test_cli_pipeline.py  test_config.py  test_destinations.py  test_destinations_postgres.py  test_discovery.py  test_e2e_example.py  test_e2e_filesystem.py  test_import_safety.py  test_init.py  test_integration_duckdb.py  test_integration_flows.py  test_known_fields.py  test_orchestration.py  test_packaging.py  test_plugins.py  test_preflight.py  test_reconciler.py  test_runner.py  test_runner_trace.py  test_runs.py  test_secrets.py  test_status_cli.py  test_validators.py
