[project]
name = "dlt-ops"
dynamic = ["version"]
description = "Run many dlt sources in production: enforced layout, validation, data gates, and a runs ledger"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Earlybird GmbH & Co. KG" }]
maintainers = [{ name = "Nikita Yurasov", email = "nikita@earlybird.com" }]
dependencies = [
    # Floor only, never an upper bound — users own their dlt version. The floor
    # is the oldest CI-verified minor (ci/dlt-versions.txt); the verified matrix
    # is documented in COMPATIBILITY.md.
    "dlt>=1.27",
    "click",
    "attrs",
    "pendulum",
    "sqlglot",
    # Hard dependency by design (`columns=` models are mandatory): the validator
    # framework, pydantic_fields helpers, and the init scaffold all import it
    # unconditionally.
    "pydantic",
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.9"] # declared floor; the non-blocking CI lane resolves the newest 2.x
bigquery = ["dlt[bigquery]"]
duckdb = ["dlt[duckdb]"]
postgres = ["dlt[postgres]"]
snowflake = ["dlt[snowflake]"]
databricks = ["dlt[databricks]"]
filesystem = ["dlt[filesystem]"]
s3 = ["dlt[s3]"]
gs = ["dlt[gs]"]
az = ["dlt[az]"]
sentry = ["sentry-sdk>=2"] # powers the built-in Sentry alert sink

[project.urls]
Documentation = "https://earlybirdvc.github.io/dlt-ops/"
Source = "https://github.com/earlybirdvc/dlt-ops"
Issues = "https://github.com/earlybirdvc/dlt-ops/issues"
Changelog = "https://github.com/earlybirdvc/dlt-ops/blob/main/CHANGELOG.md"

[project.scripts]
dlt-ops = "dlt_ops.cli.cli:cli"

# Built-in plugins register through the same entry-point groups third parties
# use (one lookup path); group scheme `dlt_ops.<axis>` is frozen.
[project.entry-points."dlt_ops.alert_sink"]
logging = "dlt_ops.reconciler._emission:LoggingAlertSink"
sentry = "dlt_ops.sentry:SentryAlertSink" # loads without sentry-sdk; construction requires the [sentry] extra

[project.entry-points."dlt_ops.assertion"]
min_rows_per_load = "dlt_ops.assertions.builtin:MinRowsPerLoad"
max_rows_per_load = "dlt_ops.assertions.builtin:MaxRowsPerLoad"
required_columns = "dlt_ops.assertions.builtin:RequiredColumns"
unique_columns = "dlt_ops.assertions.builtin:UniqueColumns"

[project.entry-points."dlt_ops.destination"]
duckdb = "dlt_ops.destinations.duckdb:DuckDBAdapter"
bigquery = "dlt_ops.destinations.bigquery:BigQueryAdapter"
postgres = "dlt_ops.destinations.postgres:PostgresAdapter"

[project.entry-points."dlt_ops.secret_backend"]
secrets_toml = "dlt_ops.secrets.default:SecretsTomlBackend"
airflow = "dlt_ops.airflow.secrets:AirflowVariableBackend" # loads without airflow; fetches lazily

# Rule provider: a zero-arg callable returning an iterable of RuleSpec.
[project.entry-points."dlt_ops.validators"]
core = "dlt_ops.discovery.validators:core_rules"
bigquery = "dlt_ops.bigquery.validators:bigquery_rules"
airflow = "dlt_ops.airflow.validators:airflow_rules" # contributes rules only when airflow is importable

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Version is single-sourced from dlt_ops/__init__.py::__version__.
[tool.hatch.version]
path = "dlt_ops/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dlt_ops"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
markers = ["integration: exercises a real project tree or destination"]

[tool.pyrefly]
project-includes = ["dlt_ops"]
python-version = "3.11"
# Modules importing extra-gated deps: dlt_ops/sentry (the [sentry]
# extra), dlt_ops/airflow (the [airflow] extra, never in the dev env),
# google.cloud (BigQuery-lane tests without the extra).
replace-imports-with-any = [
    "google.cloud.*",
    "airflow",
    "airflow.*",
    "sentry_sdk",
    "sentry_sdk.*",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff",
    "pyrefly",
    "dlt[duckdb]",
    "duckdb",
    # SQL-database-as-source lane in tests/test_integration_flows.py
    "dlt[sql_database]",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings[python]",
    "mkdocs-click>=0.9",
    "mkdocs-llmstxt>=0.5",
    "pillow>=12.3.0",
    "cairosvg>=2.9.0",
]

# Release automation (python-semantic-release). The version lives only in
# dlt_ops/__init__.py — hatchling reads it via [tool.hatch.version] —
# so PSR stamps that file and never writes a [project].version key.
[tool.semantic_release]
version_variables = ["dlt_ops/__init__.py:__version__"]
# Runs inside the PSR GitHub Action container, which ships pip but not uv.
build_command = "python -m pip install uv && uv build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"
# 0.x policy: feat -> 0.(x+1).0, fix/perf -> patch; breaking changes stay 0.x
# until 1.0 is cut deliberately.
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
exclude_commit_patterns = ['^chore\(release\):']

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
# Squash-merge PR titles are the sole canonical commit message here; body
# bullets must not add bumps or changelog entries.
parse_squash_commits = false

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
